# mc_server

./: .gitignore  Cargo.toml
src/: block_registry.rs  command.rs  datatypes.rs  error.rs  main.rs  packet.rs  packet_builder.rs  resource_manager.rs  server.rs  server_connection.rs  server_util.rs
src/packet/: configure.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
world/: level.dat_old
world/region/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
