[package]
name = "mc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_world_parser = {path = "../mca_parser"}
inbt = {path = "../inbt"}
thiserror = "1.0.60"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }