[package]
name = "mc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_world_parser = {path = "../mc_world_parser"}
inbt = {path = "../inbt"}
thiserror = "1.0.60"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
uuid = "1.8.0"